--- a/Project_Team/App.config
+++ b/Project_Team/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Manager" connectionString="data source=LEDSINH\LDSINH;initial catalog=Project_Team.Manager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Manager" connectionString="Data Source=LEDSINH\LDSINH;initial catalog=Project_Team.Manager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
