--- a/Project_Team/Project_Team.csproj
+++ b/Project_Team/Project_Team.csproj
@@ -57,11 +57,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DTO\Alumnus.cs" />
-    <Compile Include="DTO\Classes.cs" />
-    <Compile Include="DTO\Lecture.cs" />
-    <Compile Include="DTO\Lecturers.cs" />
-    <Compile Include="DTO\Major.cs" />
+    <Compile Include="DTO\KetQua.cs" />
+    <Compile Include="DTO\SinhVien.cs" />
+    <Compile Include="DTO\Lop.cs" />
+    <Compile Include="DTO\MonHoc.cs" />
+    <Compile Include="DTO\ChuNhiem.cs" />
+    <Compile Include="DTO\Khoa.cs" />
     <Compile Include="DTO\Users.cs" />
     <Compile Include="DAL\Manager.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -79,6 +80,12 @@
     <Compile Include="View\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\VIew.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\VIew.Designer.cs">
+      <DependentUpon>VIew.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -93,6 +100,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\VIew.resx">
+      <DependentUpon>VIew.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
