--- a/Project_Team/Project_Team.csproj
+++ b/Project_Team/Project_Team.csproj
@@ -8,10 +8,9 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Project_Team</RootNamespace>
     <AssemblyName>Project_Team</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,7 +46,6 @@
     </Reference>
     <Reference Include="MaterialSkin, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialSkin.0.2.1\lib\MaterialSkin.dll</HintPath>
-     <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -78,36 +76,6 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\AddGiaoVien.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\AddGiaoVien.Designer.cs">
-      <DependentUpon>AddGiaoVien.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\AddKhoa.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\AddKhoa.Designer.cs">
-      <DependentUpon>AddKhoa.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\AddLop.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\AddLop.Designer.cs">
-      <DependentUpon>AddLop.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\EditDiem.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\EditDiem.Designer.cs">
-      <DependentUpon>EditDiem.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\EditThongTin.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\EditThongTin.Designer.cs">
-      <DependentUpon>EditThongTin.cs</DependentUpon>
-    </Compile>
     <Compile Include="View\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,6 +88,12 @@
     <Compile Include="View\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\TestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\TestForm.Designer.cs">
+      <DependentUpon>TestForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -128,23 +102,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="View\AddGiaoVien.resx">
-      <DependentUpon>AddGiaoVien.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\AddKhoa.resx">
-      <DependentUpon>AddKhoa.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\AddLop.resx">
-      <DependentUpon>AddLop.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\EditDiem.resx">
-      <DependentUpon>EditDiem.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\EditThongTin.resx">
-      <DependentUpon>EditThongTin.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="View\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -153,6 +111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\TestForm.resx">
+      <DependentUpon>TestForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
