--- a/Project_Team/Project_Team.csproj
+++ b/Project_Team/Project_Team.csproj
@@ -8,9 +8,10 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Project_Team</RootNamespace>
     <AssemblyName>Project_Team</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -44,8 +45,9 @@
     <Reference Include="MaterialDesignThemes.Wpf, Version=2.3.1.953, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignThemes.2.3.1.953\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
     </Reference>
-    <Reference Include="MaterialSkin">
-      <HintPath>..\..\..\BT Thực hành .Net\QLSV\packages\MaterialSkin.0.2.1\lib\MaterialSkin.dll</HintPath>
+    <Reference Include="MaterialSkin, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MaterialSkin.0.2.1\lib\MaterialSkin.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -76,6 +78,36 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\AddGiaoVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AddGiaoVien.Designer.cs">
+      <DependentUpon>AddGiaoVien.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\AddKhoa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AddKhoa.Designer.cs">
+      <DependentUpon>AddKhoa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\AddLop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AddLop.Designer.cs">
+      <DependentUpon>AddLop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\EditDiem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\EditDiem.Designer.cs">
+      <DependentUpon>EditDiem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\EditThongTin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\EditThongTin.Designer.cs">
+      <DependentUpon>EditThongTin.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,7 +128,23 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\AddGiaoVien.resx">
+      <DependentUpon>AddGiaoVien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\AddKhoa.resx">
+      <DependentUpon>AddKhoa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\AddLop.resx">
+      <DependentUpon>AddLop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\EditDiem.resx">
+      <DependentUpon>EditDiem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\EditThongTin.resx">
+      <DependentUpon>EditThongTin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
