--- a/Project_Team/packages.config
+++ b/Project_Team/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net47" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net47" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net47" />
+  <package id="MaterialSkin" version="0.2.1" targetFramework="net452" />
 </packages>
