--- a/Project_Team/App.config
+++ b/Project_Team/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/>
   </startup>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Manager" connectionString="Data Source=DESKTOP-IE9CTCH\SQLEXPRESS;initial catalog=Project_Team.Manager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="Manager" connectionString="Data Source=LEDSINH\LDSINH;initial catalog=Project_Team.Manager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
