--- a/Project_Team/Project_Team.csproj
+++ b/Project_Team/Project_Team.csproj
@@ -76,6 +76,36 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\AddGiaoVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AddGiaoVien.Designer.cs">
+      <DependentUpon>AddGiaoVien.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\AddKhoa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AddKhoa.Designer.cs">
+      <DependentUpon>AddKhoa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\AddLop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AddLop.Designer.cs">
+      <DependentUpon>AddLop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\EditDiem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\EditDiem.Designer.cs">
+      <DependentUpon>EditDiem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\EditThongTin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\EditThongTin.Designer.cs">
+      <DependentUpon>EditThongTin.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +127,21 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\AddGiaoVien.resx">
+      <DependentUpon>AddGiaoVien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\AddKhoa.resx">
+      <DependentUpon>AddKhoa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\AddLop.resx">
+      <DependentUpon>AddLop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\EditDiem.resx">
+      <DependentUpon>EditDiem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\EditThongTin.resx">
+      <DependentUpon>EditThongTin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
