--- a/Project_Team/packages.config
+++ b/Project_Team/packages.config
@@ -4,4 +4,5 @@
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net47" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net47" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
 </packages>
